Remove approval-token
